--- a/config/ssr-plus.config
+++ b/config/ssr-plus.config
@@ -1,4 +1,4 @@
-#LuCI App ShadowSocksR+ Plus
+##LuCI App ShadowSocksR+ Plus
 CONFIG_PACKAGE_luci-app-ssr-plus=y
 #CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=y
 #CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_NaiveProxy=y
