--- a/config/usb.config
+++ b/config/usb.config
@@ -48,6 +48,7 @@ CONFIG_PACKAGE_libusbmuxd-utils=y
 CONFIG_PACKAGE_luci-app-3ginfo=y
 CONFIG_PACKAGE_luci-app-atinout-mod=y
 CONFIG_PACKAGE_luci-app-mmconfig=y
+CONFIG_PACKAGE_luci-app-modemband=y
 CONFIG_PACKAGE_luci-app-modeminfo=y
 CONFIG_PACKAGE_luci-app-sms-tool=y
 CONFIG_PACKAGE_luci-app-smstools3=y
