--- a/config/usb.config
+++ b/config/usb.config
@@ -53,12 +53,12 @@ CONFIG_PACKAGE_luci-app-sms-tool=y
 CONFIG_PACKAGE_luci-app-smstools3=y
 CONFIG_PACKAGE_luci-proto-3g=y
 #CONFIG_PACKAGE_luci-proto-bonding=y
-CONFIG_PACKAGE_luci-proto-minieap=y
-CONFIG_PACKAGE_luci-proto-modemmanager=y
+#CONFIG_PACKAGE_luci-proto-minieap=y
+#CONFIG_PACKAGE_luci-proto-modemmanager=y
 CONFIG_PACKAGE_luci-proto-ncm=y
 #CONFIG_PACKAGE_luci-proto-openconnect=y
 CONFIG_PACKAGE_luci-proto-qmi=y
-CONFIG_PACKAGE_luci-proto-relay=y
+#CONFIG_PACKAGE_luci-proto-relay=y
 CONFIG_PACKAGE_minicom=y
 CONFIG_PACKAGE_modemmanager=y
 CONFIG_PACKAGE_picocom=y
