--- a/config/extra.config
+++ b/config/extra.config
@@ -1,11 +1,2 @@
-# Add zram-swap
-CONFIG_PACKAGE_zram-swap=y
-CONFIG_PACKAGE_kmod-zram=y
-CONFIG_PROCD_ZRAM_TMPFS=y
+# extra package
 
-# Add stunnel
-CONFIG_PACKAGE_stunnel=y
-
-# Add MWAN
-CONFIG_PACKAGE_luci-app-mwan3=y
-CONFIG_PACKAGE_mwan3=y
