--- a/config/extra.config
+++ b/config/extra.config
@@ -1,2 +1,7 @@
 # extra package
-
+CONFIG_PACKAGE_luci-app-zerotier=y
+CONFIG_PACKAGE_luci-app-usb-printer=y
+CONFIG_PACKAGE_luci-app-netspeedtest=y
+CONFIG_PACKAGE_luci-app-guest-wifi=y
+CONFIG_PACKAGE_luci-app-cloudflarespeedtest=y
+CONFIG_PACKAGE_luci-app-adbyby-plus=y
