--- a/config/passwall-lite.config
+++ b/config/passwall-lite.config
@@ -6,7 +6,8 @@ CONFIG_PACKAGE_luci-app-passwall=y
 ##CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Hysteria=y
 ##CONFIG_PACKAGE_luci-app-passwall_INCLUDE_IPv6_Nat_=y
 ##CONFIG_PACKAGE_luci-app-passwall_INCLUDE_NaiveProxy=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Client=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_PDNSD=y
+##CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Client=y
 ##CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Server=y
 ##CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Rust_Client=n
 ##CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Rust_Server=n
