--- a/config/xray.config
+++ b/config/xray.config
@@ -2,6 +2,6 @@
 #LuCI App Xray
 CONFIG_PACKAGE_luci-app-xray=y
 CONFIG_PACKAGE_openwrt-xray=y
-CONFIG_PACKAGE_openwrt-xray-geodata-cut=y
+#CONFIG_PACKAGE_openwrt-xray-geodata-cut=y
 
 
