--- a/config/passwall-xray.config
+++ b/config/passwall-xray.config
@@ -1,3 +1,4 @@
+#LuCI App Passwall
 CONFIG_PACKAGE_luci-app-passwall=y
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Transparent_Proxy is not set
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Brook is not set
